--- a/src/styles/views/pricing/_pricing.scss
+++ b/src/styles/views/pricing/_pricing.scss
@@ -47,6 +47,11 @@
     grid-template-columns: 100%;
     padding: 0 20px;
   }
+
+  .pricing__table--margin-mobile {
+    margin-bottom: 26px;
+  }
+
   .pricing__table:last-child {
     margin-bottom: 0px;
   }
